more spacing fix

--- a/_sass/minima/_content.scss
+++ b/_sass/minima/_content.scss
@@ -104,7 +104,6 @@ img.bio-profile {
     .pubcard .pubright {
         text-align: left;
         margin: 0%;
-        padding-top: $spacing-unit;
         border-radius: 0px;
     }
 
